--- a/tui/src/screens/modals/modals_styles.css
+++ b/tui/src/screens/modals/modals_styles.css
@@ -29,3 +29,79 @@ ErrorModal>Vertical>#button_container {
   margin: 1;
   align: center middle;
 }
+
+LoginModal {
+  align: center middle
+}
+
+LoginModal>Vertical {
+  background: $panel;
+  height: auto;
+  max_width: 80%;
+  border: double $accent;
+  border-title-align: center;
+  align: center middle;
+  padding: 1
+}
+
+LoginModal>Vertical>#label_container {
+  height: auto;
+  text-style: bold;
+  margin: 1 0 0 0;
+  align: center middle
+}
+
+LoginModal>Vertical>#login_container {
+  height: auto;
+  width: auto;
+  padding: 1;
+  align: center middle
+}
+
+LoginModal>Vertical>#login_container>#username_container {
+  margin: 0 0 1 0;
+  height: auto;
+}
+
+LoginModal>Vertical>#login_container>#username_container>Label {
+  height: 3;
+  content-align: left middle
+}
+
+
+LoginModal>Vertical>#login_container>#username_container>Input {
+  height: auto;
+  width: 1fr
+}
+
+LoginModal>Vertical>#login_container>#password_container {
+  margin: 1 0 1 0;
+  height: auto
+}
+
+LoginModal>Vertical>#login_container>#password_container>Label {
+  height: 3;
+  content-align: left middle
+}
+
+LoginModal>Vertical>#login_container>#password_container>Input {
+  height: auto;
+  width: 1fr
+}
+
+LoginModal>Vertical>#login_container>#button_container {
+  height: auto;
+  width: 100%;
+  align: right middle
+}
+
+LoginModal>Vertical>#login_container>#button_container>Button {
+  height: auto;
+  margin: 0 2;
+  width: 10;
+  min_width: 6
+}
+
+LoginModal>Vertical>#login_container>#button_container>#exit_button {
+  width: 5
+}
